# huffman_coding

./: .gitignore  CMakeLists.txt  LISCENSE  README  README.md  test.sh
include/: ancillary_functions.h  bit_writer.h  huffman_decode_tree.h  huffman_encode_tree.h  huffman_tree.h  print_functions.h
src/: CMakeLists.txt  Makefile  bit_writer.cpp  huffman_codes.cpp  huffman_decode.cpp  huffman_decode_tree.cpp  huffman_encode.cpp  huffman_encode_tree.cpp  huffman_tree.cpp  print_functions.cpp  test.sh
